# C2DS-esp32-coop-snooper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md  partitions.csv  sdkconfig  sdkconfig.charlie  sdkconfig.charlie.old  sdkconfig.farm  sdkconfig.farm.old  sdkconfig.old  sdkconfig.tennis  sdkconfig.tennis.old  sdkconfig.test  sdkconfig.test.old
.git-crypt/keys/default/0/: 9B82847BB875CE688C242F7E0E7D16D48439430B.gpg
.github/workflows/: mqtt-ota-reload.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led.c  led.h  logging.c  logging.h  main.c  main.h  mp3.c  mp3.h  mqtt.c  mqtt.h  ota.c  ota.h  prov_wifi.c  prov_wifi.h  spiffs.c  spiffs.h  squawk_mp3.h  state_handler.c  wifi.c  wifi.h
main/certs/: AmazonRootCA1.h  AmazonRootCA1_pem.c  amazon_root_ca1.c  coop-snooper-Policy  coop-snooper-farmhouse-certificate.h  coop-snooper-farmhouse-private.pem.h  coop-snooper-farmhouse-public.pem.h  coop-snooper-tennis-home-certificate.h  coop-snooper-tennis-home-private.pem.h  coop-snooper-tennis-home-public.pem.h  coop-snooper.cert.pem  coop-snooper.public.key  coop_snooper_cert.c  coop_snooper_charlie_house_certificate_pem.c  coop_snooper_charlie_house_private_pem_key.c  coop_snooper_charlie_house_public_pem_key.c  coop_snooper_farmhouse_certificate_pem.c  coop_snooper_farmhouse_private_pem_key.c  coop_snooper_farmhouse_public_pem_key.c  coop_snooper_private_key.c  coop_snooper_tennis_home_certificate_pem.c  coop_snooper_tennis_home_private_pem_key.c  coop_snooper_tennis_home_public_pem_key.c  coop_snooper_test_certificate_pem.c  coop_snooper_test_private_pem_key.c  coop_snooper_test_public_pem_key.c  root-CA.crt
main/certs/iot-policy/: coop-snooper-Policy  coop-snooper-farmhouse-iot-policy.json  coop-snooper-iot-policy.json  coop-snooper-tennis-home-iot-policy.json
main/certs/original/: AmazonRootCA1.pem  coop-snooper-charlie-house-certificate.pem  coop-snooper-charlie-house-private.pem.key  coop-snooper-charlie-house-public.pem.key  coop-snooper-farmhouse-certificate.pem  coop-snooper-farmhouse-private.pem.key  coop-snooper-farmhouse-public.pem.key  coop-snooper-tennis-home-certificate.pem  coop-snooper-tennis-home-private.pem.key  coop-snooper-tennis-home-public.pem.key  coop-snooper-test-certificate.pem  coop-snooper-test-private.pem.key  coop-snooper-test-public.pem.key  coop-snooper.private.key
scripts/: convert_certs_to_c.sh  convert_certs_to_headers.sh  create_certs.sh  create_things.sh  list_s3_files.sh  rename_cert_files.sh  send_mqtt_ota.sh  send_self_test.sh  things.json
test/: config.json  get_telemetry.sh  init_ota.sh  ota_test_app.py
